--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
         </div>
         
     </footer>
-    <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidde" data-modal>
         <div class="modal">
             <button type="button" class="close-btn" data-modal-close>
                 <svg  width="11" height="11">
@@ -411,7 +411,7 @@
                     <span class="input-wrapper">
                     <input type="text" name="user-name" class="modal-input">
                     <svg class="input-icon" width="18" height="18">
-                        <use href="./images/sprite.svg#icon-person-black"></use>
+                        <use href="./images/sprite.svg#icon-person-black">
                     </svg>
                     </span>
                 </label>
@@ -434,14 +434,18 @@
                 <label class="input-label">Комментарий
                     <textarea name="user-text" class="modal-comment" placeholder="Введите текст"></textarea>
                 </label>
-                <input type="checkbox" id="checkbox">
+                <input type="checkbox" id="checkbox" class="visually-hidden"/>
                 <label for="checkbox" class="checkbox-text">
-                    <span></span>
+                    <span>
+                        <svg class="input-agreed" width="11" height="8">
+                            <use href="./images/sprite.svg#icon-tick"></use>
+                        </svg>
+                    </span>
                     Соглашаюсь с рассылкой и принимаю&nbsp;<a href="" class="checkbox-text-link">Условия договора</a></label>
                 <button type="submit" class="btn modal-btn">Отправить</button>
             </form>
         </div>
     </div>
-    <script src="./js/modal.js"></script>
+    <!-- <script src="./js/modal.js"></script> -->
 </body>
 </html>
