--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
         </div>
         
     </footer>
-    <div class="backdrop is-hidde" data-modal>
+    <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="close-btn" data-modal-close>
                 <svg  width="11" height="11">
@@ -446,6 +446,6 @@
             </form>
         </div>
     </div>
-    <!-- <script src="./js/modal.js"></script> -->
+    <script src="./js/modal.js"></script>
 </body>
 </html>
