--- a/index.html
+++ b/index.html
@@ -386,13 +386,14 @@
                 <div class="subscribe-form">
                     <form action="#" class="footer-form">
                         <input type="email" name="email" class="footer-input" placeholder="E-mail">
+                        <button type="submit" class="footer-btn btn">
+                            Подписаться
+                            <svg class="icon-subscribtion" width="24" height="24">
+                                <use href="./images/symbol-defs.svg#icon-icon-send"></use>
+                            </svg>
+                        </button>
                     </form>
-                    <button type="submit" class="footer-btn btn">
-                        Подписаться
-                        <svg class="icon-subscribtion" width="24" height="24">
-                            <use href="./images/sprite.svg#icon-icon-send"></use>
-                        </svg>
-                    </button>
+                    
                 </div>
             </div>
         </div>
@@ -411,7 +412,7 @@
                     <span class="input-wrapper">
                     <input type="text" name="user-name" class="modal-input">
                     <svg class="input-icon" width="18" height="18">
-                        <use href="./images/sprite.svg#icon-person-black">
+                        <use href="./images/symbol-defs.svg#icon-person-black">
                     </svg>
                     </span>
                 </label>
@@ -419,7 +420,7 @@
                     <span class="input-wrapper">
                     <input type="tel" name="user-tel" class="modal-input">
                     <svg class="input-icon" width="18" height="18">
-                        <use href="./images/sprite.svg#icon-phone-black"></use>
+                        <use href="./images/symbol-defs.svg#icon-phone-black"></use>
                     </svg>
                     </span>
                 </label>
@@ -427,7 +428,7 @@
                     <span class="input-wrapper">
                     <input type="email" name="user-email" class="modal-input">
                     <svg class="input-icon" width="18" height="18">
-                        <use href="./images/sprite.svg#icon-email-black"></use>
+                        <use href="./images/symbol-defs.svg#icon-email-black"></use>
                     </svg>
                     </span>
                 </label>
@@ -438,7 +439,7 @@
                 <label for="checkbox" class="checkbox-text">
                     <span>
                         <svg class="input-agreed" width="11" height="8">
-                            <use href="./images/sprite.svg#icon-tick"></use>
+                            <use href="./images/symbol-defs.svg#icon-tick"></use>
                         </svg>
                     </span>
                     Соглашаюсь с рассылкой и принимаю&nbsp;<a href="" class="checkbox-text-link">Условия договора</a></label>
