update modal + checkbox

--- a/index.html
+++ b/index.html
@@ -432,10 +432,10 @@
                     </svg>
                     </span>
                 </label>
-                <label class="input-label">Комментарий
+                <label class="input-label ">Комментарий
                     <textarea name="user-text" class="modal-comment" placeholder="Введите текст"></textarea>
                 </label>
-                <input type="checkbox" id="checkbox" class="visually-hidden"/>
+                <input type="checkbox" id="checkbox" class="modal-checkbox visually-hidden"/>
                 <label for="checkbox" class="checkbox-text">
                     <span>
                         <svg class="input-agreed" width="11" height="8">
