--- a/portfolio.html
+++ b/portfolio.html
@@ -253,13 +253,14 @@
                 <div class="subscribe-form">
                     <form action="#" class="footer-form">
                         <input type="email" name="email" class="footer-input" placeholder="E-mail">
+                        <button type="submit" class="footer-btn btn">
+                            Подписаться
+                            <svg class="icon-subscribtion" width="24" height="24">
+                                <use href="./images/symbol-defs.svg#icon-icon-send"></use>
+                            </svg>
+                        </button>
                     </form>
-                    <button type="submit" class="footer-btn btn">
-                        Подписаться
-                        <svg class="icon-subscribtion" width="24" height="24">
-                            <use href="./images/sprite.svg#icon-icon-send"></use>
-                        </svg>
-                    </button>
+    
                 </div>
             </div>
         </div>
